# eco-commander

./: .antigravityignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .shellcheckrc  .yamllint.yml  AUTHORS.md  Brewfile  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  INDEX.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TODO.md  commitlint.config.cjs  pyproject.toml  requirements-dev.txt
.devcontainer/: Dockerfile  README.md  devcontainer.json
.devcontainer/scripts/: doctor.sh  install-dev-tools.sh  link-eco-home.sh  post-attach.sh  post-create.sh  readiness.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  settings.yml
.github/DISCUSSION_TEMPLATE/: general.yml  ideas.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_issue.yml  feature_request.yml  release_checklist.yml
.github/workflows/: ci.yml  codeql.yml  commitlint.yml  dependabot-automerge.yml  dependency-review.yml  hygiene.yml  labeler.yml  release.yml  security.yml  stale.yml
config/: README.md  comments.example.json  config.example.json
docs/: .ai-context.yaml  FAQ.md  INDEX.md  MANIFEST.json  READING_ORDER.md  architecture.md
docs/adr/: .ai-context.yaml  0001-record-architecture-decisions.md  0002-bash-implementation.md  0003-snapshot-immutability.md  0004-usage-monitor-python-carveout.md  0005-job-scheduler.md  README.md
docs/api/: .ai-context.yaml  cli-reference.md  generate-cli-reference.sh
docs/assets/: demo.tape  demo.webm
docs/concepts/: .ai-context.yaml  README.md  mental-model.md
docs/contributing/: .ai-context.yaml  CONTRIBUTING-DOCS.md  README.md  developer-hygiene.md  engineering-standards.md  repository-governance.md  testing.md
docs/diagrams/: .ai-context.yaml  README.md  account-swap-flow.md  alert-pipeline.md  architecture.md  ci-pipeline.md  data-flow.md  filesystem-layout.md  install-lifecycle.md  meter-state-machine.md  module-deps.md  poller-pipeline.md  scheduler-flow.md  snapshot-lifecycle.md  test-architecture.md  widget-rendering.md
docs/examples/: .ai-context.yaml  README.md  cookbook.md
docs/getting-started/: .ai-context.yaml  README.md  installation.md  troubleshooting.md  usage.md
docs/migration/: .ai-context.yaml  README.md
docs/operations/: .ai-context.yaml  README.md  runbook.md  security-model.md
docs/reference/: .ai-context.yaml  README.md  configuration.md  data-model.md  environment-variables.md  glossary.md  versioning-compatibility.md
docs/rfcs/: .ai-context.yaml  README.md
docs/scripts/: .ai-context.yaml  doc-stats.sh  extract-glossary.sh  extract-section.sh  generate-manifest.py  search-docs.sh  validate-links.sh  validate-mermaid.sh
docs/subsystems/: .ai-context.yaml  README.md  alerts.md  launchd-best-practices.md  recipes.md  scheduler.md  snapshots.md  usage-monitor-integration.md  usage-monitor.md  widget-health.md
docs/tutorials/: .ai-context.yaml  README.md  first-run.md
examples/: README.md
examples/missions/: audit-missions.example.yaml  seed-jobs.example.yaml
examples/snapshot-prompts/: README.md  example-layer-a.md  example-layer-b.md
scripts/: AGENT_AUDIT_TASKLIST.md  MANIFEST.yaml  README.md  bootstrap.sh  doctor.sh  healthcheck.sh  install-hooks.sh  install-launchagents.sh  install-log-rotation.sh  install.sh  lint.sh  log-rotate.conf  release.sh  run-alerts.sh  run-poller.sh  run-scheduler.sh  setup-venv.sh  toggle-precise.sh  uninstall-launchagents.sh  uninstall-log-rotation.sh  uninstall.sh  usage-snapshot.sh  validate-commit-message.sh  verify-manifest.sh
scripts/launchagents/: README.md  com.eco-commander.scheduler.plist  com.eco-commander.swiftbar.plist  com.eco-commander.usage-poller.plist
scripts/lib/: README.md  common.sh  snapshot-helpers.sh
src/: AGENT_AUDIT_TASKLIST.md  AI_NAV.md
src/common/: __init__.py  config.py
src/poller/: MANIFEST.md  __init__.py  accounts.py  alternatives.py  caps.py  claude.py  claude_oauth.py  codex.py  codex_oauth.py  comments.py  discovery.py  gemini.py  main.py  notify.py  pace.py  time_utils.py  value.py
src/recipes/: MANIFEST.md  README.md  account-swap.sh  arabic-proof.sh  ask.sh  dashboard-refresh.sh  dashboard.sh  hygiene.sh  n8n-start.sh  note.sh  research.sh  scheduler-seed.sh  snapshot.sh  swarm.sh
src/scheduler/: MANIFEST.md  __init__.py  cli.py  dispatcher.py  queue.py  routing.py
src/tools/: __init__.py  dep_graph.py
tests/: AGENT_AUDIT_TASKLIST.md  AI_NAVIGATION.md  COVERAGE_MAP.md  INDEX.md  README.md  run-all.sh  test_queue.py
tests/bats/: 00_smoke.bats  01_router.bats  02_commander_cli.bats  03_state_parsing.bats  04_switch_profile.bats  05_usage_monitor.bats  06_eco_alerts.bats  07_pure_functions.bats  08_installers.bats  09_account_swap.bats  10_hygiene.bats  11_ai_clear.bats  11_lib_common.bats  12_lib_snapshot_helpers.bats
tests/e2e/: run_e2e.sh
tests/fixtures/: config.json.example  jobs.yaml.good  notify.json.good  (+4 more)
(+54 files in other folders)
